--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -857,6 +857,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="MvvmLightLibs">
       <Version>5.3.0</Version>
     </PackageReference>
@@ -876,7 +879,7 @@
       <Version>4.4.0</Version>
     </PackageReference>
     <PackageReference Include="Telerik.UI.for.UniversalWindowsPlatform">
-      <Version>1.0.0.5</Version>
+      <Version>1.0.0.6</Version>
     </PackageReference>
     <PackageReference Include="UICompositionAnimations">
       <Version>2.11.1</Version>
