Added improved welcome message, minor refactoring

--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -321,6 +321,9 @@
     <Compile Include="UserControls\Flyouts\DevInfo\ReviewPromptFlyout.xaml.cs">
       <DependentUpon>ReviewPromptFlyout.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Flyouts\DevInfo\WelcomeMessageFlyout.xaml.cs">
+      <DependentUpon>WelcomeMessageFlyout.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Flyouts\LoadingPopupControl.xaml.cs">
       <DependentUpon>LoadingPopupControl.xaml</DependentUpon>
     </Compile>
@@ -711,6 +714,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Flyouts\DevInfo\ReviewPromptFlyout.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Flyouts\DevInfo\WelcomeMessageFlyout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
