--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -361,6 +361,9 @@
     <Compile Include="UserControls\Flyouts\Settings\Sections\UISettingsSection.xaml.cs">
       <DependentUpon>UISettingsSection.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Flyouts\UserGuide\CodeSamples\BreakpointCodePreviewControl.xaml.cs">
+      <DependentUpon>BreakpointCodePreviewControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Flyouts\UserGuide\CodeSamples\PrintHelloCodePreviewControl.xaml.cs">
       <DependentUpon>PrintHelloCodePreviewControl.xaml</DependentUpon>
     </Compile>
@@ -372,6 +375,9 @@
     </Compile>
     <Compile Include="UserControls\Flyouts\UserGuide\Sections\CodeSamplesGuideControl.xaml.cs">
       <DependentUpon>CodeSamplesGuideControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Flyouts\UserGuide\Sections\DebuggingGuideControl.xaml.cs">
+      <DependentUpon>DebuggingGuideControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Flyouts\UserGuide\Sections\PBrainGuideControl.xaml.cs">
       <DependentUpon>PBrainGuideControl.xaml</DependentUpon>
@@ -774,6 +780,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControls\Flyouts\UserGuide\CodeSamples\BreakpointCodePreviewControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\Flyouts\UserGuide\CodeSamples\PrintHelloCodePreviewControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -789,6 +799,10 @@
     <Page Include="UserControls\Flyouts\UserGuide\Sections\CodeSamplesGuideControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UserControls\Flyouts\UserGuide\Sections\DebuggingGuideControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Flyouts\UserGuide\Sections\PBrainGuideControl.xaml">
       <Generator>MSBuild:Compile</Generator>
