--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -215,6 +215,8 @@
     <Compile Include="Messages\Actions\VirtualArrowKeyPressedMessage.cs" />
     <Compile Include="Messages\IDEStatus\IDEPendingChangesStatusChangedMessage.cs" />
     <Compile Include="Messages\IDEStatus\WorkingSourceCodeChangedMessage.cs" />
+    <Compile Include="Messages\KeyboardShortcuts\CtrlShortcutPressedMessage.cs" />
+    <Compile Include="Messages\KeyboardShortcuts\EscKeyPressedMessage.cs" />
     <Compile Include="Messages\UI\AppLoadingStatusChangedMessage.cs" />
     <Compile Include="Messages\Flyouts\NotificationCloseRequestmessage.cs" />
     <Compile Include="Messages\IDEStatus\BreakpointErrorStatusChangedMessage.cs" />
