--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -868,9 +868,6 @@
     <PackageReference Include="HockeySDK.UWP">
       <Version>4.1.6</Version>
     </PackageReference>
-    <PackageReference Include="JetBrains.Annotations">
-      <Version>2018.2.1</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.ApplicationInsights.WindowsApps">
       <Version>1.1.1</Version>
     </PackageReference>
@@ -904,11 +901,14 @@
     <PackageReference Include="SQLite.uwp">
       <Version>3.24.0</Version>
     </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Telerik.UI.for.UniversalWindowsPlatform">
       <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="UICompositionAnimations">
-      <Version>2.16.1</Version>
+      <Version>2.15.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
