Added confirm popup for unsaved IDE changes, code refactoring (WIP)

--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -208,16 +208,19 @@
     <Compile Include="Helpers\WindowsAPIs\ShareCharmsHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\TimelineManager.cs" />
     <Compile Include="Messages\Actions\DebugStatusChangedMessage.cs" />
-    <Compile Include="Messages\Actions\IDEAutosaveTriggeredMessage.cs" />
+    <Compile Include="Messages\Requests\IDEAutosaveTriggeredMessage.cs" />
     <Compile Include="Messages\Actions\IDEDeleteCharacterRequestMessage.cs" />
     <Compile Include="Messages\Actions\IDENewLineRequestedMessage.cs" />
     <Compile Include="Messages\Actions\IDEUndoRedoRequestMessage.cs" />
     <Compile Include="Messages\Actions\SaveButtonsEnabledStatusChangedMessage.cs" />
     <Compile Include="Messages\Actions\VirtualArrowKeyPressedMessage.cs" />
     <Compile Include="Messages\IDEStatus\IDEPendingChangesStatusChangedMessage.cs" />
+    <Compile Include="Messages\Requests\IDEUnsavedChangesRequestMessage.cs" />
     <Compile Include="Messages\IDEStatus\WorkingSourceCodeChangedMessage.cs" />
     <Compile Include="Messages\KeyboardShortcuts\CtrlShortcutPressedMessage.cs" />
     <Compile Include="Messages\KeyboardShortcuts\EscKeyPressedMessage.cs" />
+    <Compile Include="Messages\Requests\MessengerRequestExtensions.cs" />
+    <Compile Include="Messages\Requests\RequestMessageBase.cs" />
     <Compile Include="Messages\UI\AppLoadingStatusChangedMessage.cs" />
     <Compile Include="Messages\Flyouts\NotificationCloseRequestmessage.cs" />
     <Compile Include="Messages\IDEStatus\BreakpointErrorStatusChangedMessage.cs" />
