--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\ShareCharmsHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\TimelineManager.cs" />
+    <Compile Include="Messages\Abstract\ValueChangedMessageBase.cs" />
     <Compile Include="Messages\Actions\DebugStatusChangedMessage.cs" />
     <Compile Include="Messages\Requests\IDEAutosaveTriggeredMessage.cs" />
     <Compile Include="Messages\Actions\IDEDeleteCharacterRequestMessage.cs" />
@@ -215,26 +216,26 @@
     <Compile Include="Messages\Actions\IDEUndoRedoRequestMessage.cs" />
     <Compile Include="Messages\Actions\SaveButtonsEnabledStatusChangedMessage.cs" />
     <Compile Include="Messages\Actions\VirtualArrowKeyPressedMessage.cs" />
-    <Compile Include="Messages\IDEStatus\IDEPendingChangesStatusChangedMessage.cs" />
+    <Compile Include="Messages\IDE\IDEPendingChangesStatusChangedMessage.cs" />
     <Compile Include="Messages\Requests\IDEUnsavedChangesRequestMessage.cs" />
-    <Compile Include="Messages\IDEStatus\WorkingSourceCodeChangedMessage.cs" />
+    <Compile Include="Messages\IDE\WorkingSourceCodeChangedMessage.cs" />
     <Compile Include="Messages\KeyboardShortcuts\CtrlShortcutPressedMessage.cs" />
     <Compile Include="Messages\KeyboardShortcuts\EscKeyPressedMessage.cs" />
     <Compile Include="Messages\Requests\MessengerRequestExtensions.cs" />
     <Compile Include="Messages\Requests\StdinBufferRequestMessage.cs" />
     <Compile Include="Messages\UI\BackgroundExecutionDisabledMessage.cs" />
     <Compile Include="Messages\UI\BackgroundExecutionStatusChangedMessage.cs" />
-    <Compile Include="ViewModels\Abstract\RequestMessageBase.cs" />
+    <Compile Include="Messages\Requests\Abstract\RequestMessageBase.cs" />
     <Compile Include="Messages\Requests\SourceCodeRequestMessage.cs" />
     <Compile Include="Messages\UI\AppLoadingStatusChangedMessage.cs" />
     <Compile Include="Messages\Flyouts\NotificationCloseRequestmessage.cs" />
-    <Compile Include="Messages\IDEStatus\BreakpointErrorStatusChangedMessage.cs" />
-    <Compile Include="Messages\OverflowModeChangedMessage.cs" />
-    <Compile Include="Messages\UI\BlurModeChangedMessage.cs" />
+    <Compile Include="Messages\IDE\BreakpointErrorStatusChangedMessage.cs" />
+    <Compile Include="Messages\Settings\OverflowModeChangedMessage.cs" />
+    <Compile Include="Messages\Settings\BlurModeChangedMessage.cs" />
     <Compile Include="Messages\UI\IDEDisplayRequestMessage.cs" />
-    <Compile Include="Messages\UI\IDESettingsChangedMessage.cs" />
+    <Compile Include="Messages\Settings\IDESettingsChangedMessage.cs" />
     <Compile Include="Messages\UI\IDEThemePreviewFontChangedMessage.cs" />
-    <Compile Include="Messages\UI\PBrainButtonsVisibilityChangedMessage.cs" />
+    <Compile Include="Messages\Settings\PBrainButtonsVisibilityChangedMessage.cs" />
     <Compile Include="PopupService\Interfaces\IAsyncLoadedContent.cs" />
     <Compile Include="PopupService\Interfaces\IBusyWorkingContent.cs" />
     <Compile Include="PopupService\InternalTypes\Offset.cs" />
@@ -268,11 +269,11 @@
     <Compile Include="Messages\Flyouts\FlyoutClosedNotificationMessage.cs" />
     <Compile Include="Messages\Flyouts\FlyoutCloseRequestMessage.cs" />
     <Compile Include="Messages\Flyouts\FlyoutOpenedMessage.cs" />
-    <Compile Include="Messages\IDEStatus\ConsoleStatusUpdateMessage.cs" />
-    <Compile Include="Messages\IDEStatus\IDEStatusUpdateMessage.cs" />
-    <Compile Include="Messages\IDEStatus\IDEStatusUpdateMessageBase.cs" />
-    <Compile Include="Messages\OperatorAddedMessage.cs" />
-    <Compile Include="Messages\SourceCodeLoadingRequestedMessage.cs" />
+    <Compile Include="Messages\IDE\ConsoleStatusUpdateMessage.cs" />
+    <Compile Include="Messages\IDE\IDEStatusUpdateMessage.cs" />
+    <Compile Include="Messages\IDE\IDEStatusUpdateMessageBase.cs" />
+    <Compile Include="Messages\UI\OperatorAddedMessage.cs" />
+    <Compile Include="Messages\IDE\SourceCodeLoadingRequestedMessage.cs" />
     <Compile Include="PopupService\Misc\NotificationType.cs" />
     <Compile Include="PopupService\NotificationsManager.cs" />
     <Compile Include="PopupService\UI\NotificationPopup.xaml.cs">
@@ -941,9 +942,7 @@
       <Name>Visual C++ 2015 Runtime for Universal Windows Platform Apps</Name>
     </SDKReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Messages\Requests\Abstract\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
