--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -195,12 +195,11 @@
     <Compile Include="Helpers\CodeFormatting\CodeThemes.cs" />
     <Compile Include="DataModels\Misc\Themes\LineHighlightStyle.cs" />
     <Compile Include="Helpers\CodeFormatting\InstalledFont.cs" />
-    <Compile Include="Helpers\ComboBoxDataTemplateSelector.cs" />
+    <Compile Include="Helpers\UI\ComboBoxDataTemplateSelector.cs" />
     <Compile Include="Helpers\Extensions\TextExtensions.cs" />
-    <Compile Include="Helpers\LauncherHelper.cs" />
     <Compile Include="Helpers\Settings\AppSettingsKeys.cs" />
     <Compile Include="Helpers\Settings\AppSettingsManager.cs" />
-    <Compile Include="Helpers\EmailHelper.cs" />
+    <Compile Include="Helpers\WindowsAPIs\EmailHelper.cs" />
     <Compile Include="Helpers\Extensions\StringExtensions.cs" />
     <Compile Include="Helpers\Extensions\_IEnumerableExtensions.cs" />
     <Compile Include="Helpers\Settings\SettingSaveMode.cs" />
@@ -249,10 +248,10 @@
     <Compile Include="Helpers\Extensions\MiscExtensions.cs" />
     <Compile Include="Helpers\Extensions\NumericExtensions.cs" />
     <Compile Include="Helpers\Extensions\UIExtensions.cs" />
-    <Compile Include="Helpers\IndexedModelWithValue.cs" />
-    <Compile Include="Helpers\LocalizationManager.cs" />
-    <Compile Include="Helpers\MenuFlyoutHelper.cs" />
-    <Compile Include="Helpers\XAMLResourcesHelper.cs" />
+    <Compile Include="DataModels\IndexedModelWithValue.cs" />
+    <Compile Include="Helpers\UI\LocalizationManager.cs" />
+    <Compile Include="Helpers\UI\MenuFlyoutHelper.cs" />
+    <Compile Include="Helpers\UI\XAMLResourcesHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\KeyEventsListener.cs" />
     <Compile Include="Helpers\WindowsAPIs\ApplicationViewHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\TitleBarHelper.cs" />
